--- a/projects/capstone/capstone.qmd
+++ b/projects/capstone/capstone.qmd
@@ -12,7 +12,7 @@ about:
       href: "https://github.com/zachbtw/Zhou-Pipping-CMSA"
     - icon: easel
       text: "Slides"
-      href: "PassPredictRSlides.qmd "
+      href: "zachbtw.github.io/PassPredictRSlides.qmd"
     
 format: html
 ---
