--- a/PassPredictRSlides.qmd
+++ b/PassPredictRSlides.qmd
@@ -42,6 +42,7 @@ format:
 
 ::::::::: columns
 ::::::: {.column width="50%"}
+::: {.r-fit-text}
 -   **2024 NFL Big Data Bowl – 2022 Season Weeks 1–9**
 ::: fragment
 -   **Game and Play Data** – Teams, Score, Play Description, Game Context, Play Result, Changes in Win Probability
@@ -56,6 +57,7 @@ format:
 ::: fragment
 -   Exclusively looking at throwing plays with an obvious target
     -   Removing spikes and throwaways
+:::
 :::
 
 :::::::
