--- a/PassPredictRSlides.qmd
+++ b/PassPredictRSlides.qmd
@@ -42,8 +42,9 @@ format:
 
 ::::::::: columns
 ::::::: {.column width="50%"}
-::: {.r-fit-text}
 -   **2024 NFL Big Data Bowl – 2022 Season Weeks 1–9**
+<div class="r-fit-text">
+This text will automatically adjust its size to fit within the 50% width of this column.
 ::: fragment
 -   **Game and Play Data** – Teams, Score, Play Description, Game Context, Play Result, Changes in Win Probability
 :::
@@ -58,8 +59,7 @@ format:
 -   Exclusively looking at throwing plays with an obvious target
     -   Removing spikes and throwaways
 :::
-:::
-
+</div>
 :::::::
 
 ::: {.column width="50%"}
