--- a/PassPredictRSlides.qmd
+++ b/PassPredictRSlides.qmd
@@ -108,7 +108,7 @@ format:
 |------------------------------------|------------------------------------|
 | **Recipient Features** | \- *Distance (x, y, magnitude)\** <br> - *Speed Differences (x, y, magnitude)\** <br> - *Orientation Differences\** <br> - *Speed Vector Distance\** <br> - Receiver Position <br> - First Down Indicator <br> - Number of Defenders in Route-Runner's "Next 5 Yards"<br> - Angle between QB Orientation and Receiver 5 Frames Prior <br> |
 | **Quarterback Features** | \- Distance from Receiver <br> - Movement Vector <br> - Under Pressure Indicator |
-| **Game Context** | \- Quarter <br> - Down and Distance <br> - Score Differential <br> - Time Remaining |
+| **Game Context** | \- Quarter, Time Remaining <br> - Down and Distance, Score Differential |
 
 <br><br>*\*Feature taken relative to the top-3 closest defenders*
 
