--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Zachary R. Pipping"
 about:
   template: jolla
-  image: assets/headshot.JPEG
+  image: websiteassets/headshot.JPEG
   links:
     - icon: inbox
       text: Email
