--- a/projects/eda/eda.qmd
+++ b/projects/eda/eda.qmd
@@ -5,7 +5,7 @@ date: "June 2025"
 resources: "."
 about:
   template: solana
-  image: cover.webp
+  image: EDAThumbnail.png
   links:
     - icon: github
       text: "GitHub"
