--- a/projects/capstone/capstone.qmd
+++ b/projects/capstone/capstone.qmd
@@ -5,7 +5,7 @@ date: "July 2025"
 resources: "."
 about:
   template: solana
-  image: CapstoneThumbnail.png
+  image: websiteassets/CapstoneThumbnail.png
   links:
     - icon: github
       text: "GitHub"
